--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>advice-generator-app</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
+  <title>advice generator app</title>
 
 </head>
 
@@ -15,10 +16,11 @@
 
 
 
+  Advice #<!-- Advice ID goes here -->
 
+  "<!-- Advice text goes here -->"
 
-
-    <script src="main.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
