--- a/index.html
+++ b/index.html
@@ -6,19 +6,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.1/font/bootstrap-icons.min.css"
+    integrity="sha512-oAvZuuYVzkcTc2dH5z1ZJup5OmSQ000qlfRvuoTTiyTBjwX1faoyearj8KdMq0LgsBTHMrRuMek7s+CxF8yE+w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap" rel="stylesheet">
   <title>advice generator app</title>
 
 </head>
 
 <body>
 
+  <section class="main">
+    <div class="container">
+      <div class="card">
+        <div class="advice">
+          ADVICE #117<!--#111 Advice ID goes here -->
+        </div>
+        <div class="quote">
+          "It is easy to sit up and take notice, what's difficult is getting up and taking action
+          <!-- Advice text goes here -->"
+        </div>
+        <div class="separator">
+          <div class="line">
+          </div>
+          <div class="white">
+          </div>
+          <div class="white">
+          </div>
+          <div class="line">
+          </div>
+        </div>
+        <div class="dice">
+          <div class="dice-bg">
+            <div class="dice-bg">
+              <i class="bi bi-dice-5-fill"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
 
 
-  Advice #<!-- Advice ID goes here -->
-
-  "<!-- Advice text goes here -->"
 
   <script src="main.js"></script>
 </body>
